<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/app_bar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/address_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:id="@+id/porch_edit"
        android:hint="@string/porch"
        android:paddingTop="40dp"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/apartment"
        android:id="@+id/apartment_edit"
        android:paddingTop="40dp"
        android:layout_below="@+id/porch_edit"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/porch_edit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/description"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:id="@+id/description_edit"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/apartment_edit"
        android:layout_alignEnd="@+id/apartment_edit" />

</RelativeLayout>
