<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/app_bar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <include
            layout="@layout/map_fragment"
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_menu"
            android:layout_below="@+id/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/main_menu"
            android:layout_above="@+id/tab_layout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp">

            <Button
                android:text="@string/now__text_button"
                android:id="@+id/time_button"
                android:drawableTop="@drawable/clock"
                style="@style/MyButton"
                android:onClick="goToPay" />

            <Button
                android:text="@string/suggestion_text_button"
                android:id="@+id/wishes_button"
                android:drawableTop="@drawable/pen"
                style="@style/MyButton"
                android:onClick="goToService" />

            <Button
                android:text="@string/adress_text_button"
                android:id="@+id/address_button"
                android:drawableTop="@drawable/comment"
                style="@style/MyButton"
                android:onClick="goToAddress" />
        </LinearLayout>


        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:tabMode="scrollable"
            android:onClick="goToPay"
            app:tabBackground="@drawable/tab_selected"
            app:tabIndicatorColor="@color/off"
            android:layout_above="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/linearLayout"
            android:background="@color/background_order"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/hint_point"
                android:textColor="@android:color/white"
                android:paddingBottom="5dp" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#3a3e3d"
        app:itemTextColor="@android:color/white"
        android:fitsSystemWindows="true"
        app:theme="@style/TransparentStatusBar"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>