<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/main_menu"
    android:layout_below="@+id/app_bar"
    android:id="@+id/map_content">

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.scope.mapmarker.MapsActivity"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingBottom="40dp"
        android:id="@+id/imageView"
        android:src="@drawable/static_marker"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/Apoint"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stream_exemption"
            android:textColor="@android:color/black"
            android:id="@+id/addressNameA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/vicinityNameA"
            android:layout_below="@+id/addressNameA"
            android:layout_alignStart="@+id/addressNameA" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/Bpoint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:layout_below="@+id/Apoint"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_address"
            android:textColor="@android:color/black"
            android:id="@+id/addressNameB"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/press_plus"
            android:id="@+id/vicinityNameB"
            android:layout_below="@+id/addressNameB"
            android:layout_alignStart="@+id/addressNameB"
            android:layout_toStartOf="@+id/imageButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@android:drawable/ic_input_add"
            android:background="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:onClick="setPoint" />
    </RelativeLayout>
</RelativeLayout>